<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_BinaryFrame" Id="{c100f565-aee6-4619-b553-84acfa28b246}">
    <Declaration><![CDATA[(* Simple binary TCP/IP frame (8 byte aligned) *)
TYPE ST_BinaryFrame :
STRUCT
//	head	: ST_BinaryHeader;(* Frame header (16 byte) *)
	data 	: ST_ApplicationBinaryData;(* User data (120 byte) *)

	(* Total frame size = 136 byte *)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>